--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@ionic/angular": "4.0.0-beta.7",
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "^2.2.0",
-    "cordova-android": "7.0.0",
+    "cordova-android": "7.1.1",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-exit": "^1.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
